--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,16 @@
     "enabled": false,
     "autoAlias": false,
     "silent": true
-  }
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "access-control-allow-origin",
+          "value": "*"
+        }
+      ]
+    }
+  ]
 }
